syntax = "proto3";
package rarimo.rarimocore.tokenmanager;

option go_package = "gitlab.com/rarimo/rarimo-core/x/tokenmanager/types";


enum NetworkType {
  EVM = 0;
  Solana = 1;
  Near = 2;
  Other = 3;
}

message NetworkParams {
  // network name
  string name = 1;
  // contract address hex
  string contract = 2;
  NetworkType type = 4;
}

// Params defines the parameters for the module.
message Params {
  repeated NetworkParams networks = 1;
}
